--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <name>Closure Templates</name>
-  <groupId>com.google.template</groupId>
-  <artifactId>soy</artifactId>
-  <version>2016-01-12</version>
+  <groupId>org.slieb.thirdparty</groupId>
+  <artifactId>closure-templates</artifactId>
+  <version>2016-07-17</version>
   <description>
     Closure Templates are a client-side and server-side templating system.
   </description>
@@ -415,7 +415,7 @@
                 <fences implementation="com.google.security.fences.FencesMavenEnforcerRule">
                   <!-- The compiled JAR should not violate the policy it itself exports
                       (see fences.xml). -->
-                  <import>com.google.template:soy</import>
+                  <import>${groupId}:${artifactId}</import>
                 </fences>
               </rules>
               <fail>true</fail>
@@ -742,7 +742,7 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>javacc-maven-plugin</artifactId>
         <version>2.6</version>
-        <!-- TODO: this is failing according to 
+        <!-- TODO: this is failing according to
              https://travis-ci.org/google/closure-templates/builds/101956895 -->
         <configuration>
           <sourceDirectory>${project.basedir}/java/src</sourceDirectory>
